# xiaozhi-esp32

main/: CMakeLists.txt  Kconfig.projbuild
main/boards/common/: axp173.cc  axp173.h
main/boards/jianglian-s3cam/: README.md  config.h  config.json  jianglian_s3cam_board.cc
scripts/p3_tools/: README.md  main.py  pyproject.toml
