[project]
name = "p3-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.9.2",
    "numpy>=1.20.0",
    "opuslib>=3.0.1",
    "pyloudnorm>=0.1.1",
    "sounddevice>=0.4.4",
    "soundfile>=0.13.1",
    "tqdm>=4.62.0",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
